--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@tauri-apps/api": "^1.5.2",
     "date-fns": "^3.3.1",
     "react": "^18.2.0",
