--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,16 @@ jobs:
         with:
           node-version: 20
       
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev
+      - name: Install dependencies (Ubuntu)
+        if: runner.os == 'Linux'
+          run: |
+            sudo apt-get update
+            sudo apt-get install -y libgtk-3-dev
+
+      - name: Install dependencies (macOS)
+        if: runner.os == 'macOS'
+          run: |
+            brew install gtk+3
 
       - name: Install dependencies
         run: yarn install
