--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
-          brew install gtk+3 libsoup webkit2gtk
+          brew install gtk+3 libsoup webkitgtk
 
       - name: Install dependencies
         run: yarn install
